[style] Fix "card" component on smaller devices to correctly alternate despite filter changes

--- a/src/assets/scss/blocks/_card.scss
+++ b/src/assets/scss/blocks/_card.scss
@@ -123,7 +123,7 @@
 
 	@container gridlist (min-width: 18.75rem) and (max-width: 26.4375rem) {
 		flex-direction: row;
-		&:nth-child(even) {
+		&:nth-child(even of [aria-hidden='false']) {
 			flex-direction: row-reverse;
 		}
 
